--- a/app/src/main/res/layout-land/activity_record.xml
+++ b/app/src/main/res/layout-land/activity_record.xml
@@ -64,12 +64,20 @@
                             app:layout_constraintTop_toBottomOf="@+id/bt_record"
                             app:srcCompat="@drawable/icons8_coche_96" />
 
+                        <FrameLayout
+                            android:id="@+id/video_view"
+                            android:layout_width="match_parent"
+                            android:layout_height="297dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent">
+
+                        </FrameLayout>
+
                         <Chronometer
                             android:id="@+id/chronometer"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-
-                            android:layout_marginBottom="32dp"
+                            android:layout_marginBottom="24dp"
                             android:layout_marginEnd="40dp"
                             android:layout_marginRight="40dp"
                             android:background="@color/colorCharcoal"
@@ -79,18 +87,6 @@
                             android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="@+id/video_view" />
-
-                        <FrameLayout
-                            android:id="@+id/video_view"
-                            android:layout_width="match_parent"
-                            android:layout_height="297dp"
-                            android:layout_marginTop="8dp"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            >
-
-                        </FrameLayout>
-
 
 
                     </android.support.constraint.ConstraintLayout>
