--- a/app/src/main/res/layout-land/activity_play_video.xml
+++ b/app/src/main/res/layout-land/activity_play_video.xml
@@ -30,11 +30,10 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.8"
                     android:orientation="vertical">
 
                     <android.support.constraint.ConstraintLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent">
 
                         <android.support.design.widget.FloatingActionButton
@@ -45,7 +44,8 @@
                             android:layout_marginRight="40dp"
                             android:layout_marginTop="92dp"
                             android:clickable="true"
-                            app:backgroundTint="@android:color/holo_red_dark"
+                            android:src="@android:drawable/ic_media_play"
+                            app:backgroundTint="@android:color/holo_red_light"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
@@ -64,29 +64,36 @@
 
                         <VideoView
                             android:id="@+id/video_view_selected"
-                            android:layout_width="match_parent"
-                            android:layout_height="297dp"
+                            android:layout_width="700dp"
+                            android:layout_height="500dp"
+                            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <android.support.constraint.ConstraintLayout
-                            android:layout_width="match_parent"
+                            android:id="@+id/constraintLayout"
+                            android:layout_width="700dp"
                             android:layout_height="164dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/video_view_selected">
+                            app:layout_constraintTop_toBottomOf="@+id/video_view_selected"
+                            app:layout_constraintVertical_bias="0.0">
+
 
                             <ScrollView
+                                android:id="@+id/scroll_view_time_lines"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_height="match_parent"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent">
 
+
                                 <HorizontalScrollView
+                                    android:id="@+id/horizontal_scroll_view"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     app:layout_constraintBottom_toBottomOf="parent"
@@ -96,8 +103,9 @@
                                     app:layout_constraintTop_toTopOf="parent">
 
 
-                                    <android.support.constraint.ConstraintLayout
-                                        android:layout_width="match_parent"
+                                    <RelativeLayout
+                                        android:id="@+id/time_lines_container"
+                                        android:layout_width="wrap_content"
                                         android:layout_height="match_parent">
 
                                         <LinearLayout
@@ -125,11 +133,12 @@
                                             app:layout_constraintTop_toTopOf="parent"
                                             app:layout_constraintVertical_bias="0.0" />
 
-                                    </android.support.constraint.ConstraintLayout>
-
+                                    </RelativeLayout>
 
                                 </HorizontalScrollView>
+
                             </ScrollView>
+
 
                         </android.support.constraint.ConstraintLayout>
 
@@ -140,9 +149,8 @@
                 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                     xmlns:tools="http://schemas.android.com/tools"
                     android:id="@+id/re_tags_selected"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.2"
                     android:padding="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
