--- a/app/src/main/res/layout-land/activity_start.xml
+++ b/app/src/main/res/layout-land/activity_start.xml
@@ -89,7 +89,7 @@
 
                         <RadioButton
                             android:id="@+id/radio_button_insert"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="32dp"
                             android:layout_marginStart="32dp"
@@ -144,11 +144,13 @@
                         android:id="@+id/ll_create_grid"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="8dp"
                         android:clickable="true"
                         android:orientation="vertical"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/radio_Button_new">
 
@@ -201,7 +203,6 @@
                             tools:visibility="visible" />
 
 
-
                         <LinearLayout
                             android:id="@+id/new_event"
                             android:layout_width="match_parent"
@@ -240,6 +241,7 @@
                             android:id="@+id/button_go"
                             android:layout_width="wrap_content"
                             android:layout_height="30dp"
+                            android:layout_gravity="right"
                             android:layout_marginBottom="8dp"
                             android:layout_marginEnd="16dp"
                             android:layout_marginRight="16dp"
@@ -250,8 +252,7 @@
                             app:fontFamily="@font/roboto"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/ll_create_grid"
-                            android:layout_gravity="right"/>
+                            app:layout_constraintTop_toBottomOf="@+id/ll_create_grid" />
 
                     </LinearLayout>
 
