--- a/app/src/main/res/layout-land/activity_record.xml
+++ b/app/src/main/res/layout-land/activity_record.xml
@@ -32,66 +32,24 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <android.support.design.widget.FloatingActionButton
-                        android:id="@+id/bt_record"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="40dp"
-                        android:layout_marginRight="40dp"
-                        android:layout_marginTop="92dp"
-                        android:clickable="true"
-                        app:backgroundTint="@android:color/holo_red_dark"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <android.support.design.widget.FloatingActionButton
-                        android:id="@+id/bt_finish"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="40dp"
-                        android:layout_marginRight="40dp"
-                        android:layout_marginTop="16dp"
-                        android:clickable="true"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/bt_record"
-                        app:srcCompat="@android:drawable/checkbox_on_background" />
-
-                    <Chronometer
-                        android:id="@+id/chronometer"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-
-                        android:layout_marginEnd="40dp"
-                        android:layout_marginRight="40dp"
-                        android:layout_marginTop="16dp"
-                        android:background="@color/colorCharcoal"
-                        android:gravity="center"
-                        android:padding="10dp"
-                        android:textColor="@color/color9"
-                        android:textStyle="bold"
-                        app:layout_constraintEnd_toEndOf="@+id/video_view"
-                        app:layout_constraintTop_toBottomOf="@+id/bt_finish" />
-
                     <FrameLayout
                         android:id="@+id/video_view"
                         android:layout_width="500dp"
                         android:layout_height="350dp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
-                    </FrameLayout>
+                        app:layout_constraintTop_toTopOf="parent" />
 
 
                 </android.support.constraint.ConstraintLayout>
 
                 <ScrollView
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent">
 
                     <HorizontalScrollView
                         android:id="@+id/horizontalScrollView"
-                        android:layout_width="match_parent"
+                        android:layout_width="500dp"
                         android:layout_height="match_parent"
                         android:scrollbars="horizontal"
                         app:layout_constraintEnd_toEndOf="@id/video_view"
@@ -107,30 +65,81 @@
                 </ScrollView>
             </LinearLayout>
 
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="350dp"
+                android:gravity="center_vertical"
+                android:orientation="vertical"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp">
 
-                <LinearLayout
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/bt_record"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:orientation="vertical">
+                    android:clickable="true"
+                    app:backgroundTint="@android:color/holo_red_dark"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/bt_finish"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:clickable="true"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/bt_record"
+                    app:srcCompat="@android:drawable/checkbox_on_background" />
 
 
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/re_tags"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                <Chronometer
+                    android:id="@+id/chronometer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:background="@color/colorCharcoal"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:textColor="@color/color9"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/bt_finish" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:padding="8dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
+                        android:orientation="vertical">
 
 
-                    </android.support.v7.widget.RecyclerView>
-                </LinearLayout>
-            </ScrollView>
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/re_tags"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center_horizontal"
+                            android:padding="8dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent">
+
+
+                        </android.support.v7.widget.RecyclerView>
+                    </LinearLayout>
+                </ScrollView>
+            </LinearLayout>
+
+
 
         </LinearLayout>
     </android.support.constraint.ConstraintLayout>
