--- a/app/src/main/res/layout-land/activity_play_video.xml
+++ b/app/src/main/res/layout-land/activity_play_video.xml
@@ -9,14 +9,12 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toTopOf="parent">
 
         <include
             android:id="@+id/appBar"
@@ -30,13 +28,14 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="500dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <android.support.constraint.ConstraintLayout
+                    android:id="@+id/container_video"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content">
 
                     <android.support.design.widget.FloatingActionButton
                         android:id="@+id/bt_play_selected"
@@ -51,85 +50,99 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
+                    <android.support.design.widget.FloatingActionButton
+                        android:id="@+id/bt_finish_selected"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="40dp"
+                        android:layout_marginRight="40dp"
+                        android:layout_marginTop="16dp"
+                        android:clickable="true"
+                        android:longClickable="false"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/bt_play_selected"
+                        app:srcCompat="@android:drawable/checkbox_on_background" />
+
                     <VideoView
                         android:id="@+id/video_view_selected"
-                        android:layout_width="700dp"
-                        android:layout_height="500dp"
-                        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+                        android:layout_width="500dp"
+                        android:layout_height="wrap_content"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <android.support.constraint.ConstraintLayout
-                        android:id="@+id/constraintLayout"
-                        android:layout_width="700dp"
-                        android:layout_height="164dp"
+
+                </android.support.constraint.ConstraintLayout>
+
+                <android.support.constraint.ConstraintLayout
+                    android:id="@+id/constraintLayout"
+                    android:layout_width="500dp"
+                    android:layout_height="164dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/container_video"
+                    app:layout_constraintVertical_bias="0.0">
+
+                    <ScrollView
+                        android:id="@+id/scroll_view_time_lines"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/video_view_selected"
-                        app:layout_constraintVertical_bias="0.0">
+                        app:layout_constraintTop_toTopOf="parent">
 
-                        <ScrollView
-                            android:id="@+id/scroll_view_time_lines"
+                        <HorizontalScrollView
+                            android:id="@+id/horizontal_scroll_view"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_weight="0.8"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent">
 
-                            <HorizontalScrollView
-                                android:id="@+id/horizontal_scroll_view"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintHorizontal_weight="0.8"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent">
 
+                            <RelativeLayout
+                                android:id="@+id/time_lines_container"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent">
 
-                                <RelativeLayout
-                                    android:id="@+id/time_lines_container"
+                                <LinearLayout
+                                    android:id="@+id/ll_main_playvideo"
                                     android:layout_width="wrap_content"
-                                    android:layout_height="match_parent">
+                                    android:layout_height="wrap_content"
+                                    android:orientation="vertical"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent" />
 
-                                    <LinearLayout
-                                        android:id="@+id/ll_main_playvideo"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:orientation="vertical"
-                                        app:layout_constraintBottom_toBottomOf="parent"
-                                        app:layout_constraintEnd_toEndOf="parent"
-                                        app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toTopOf="parent" />
+                                <SeekBar
+                                    android:id="@+id/seek_bar_selected"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:clickable="false"
+                                    android:focusable="false"
+                                    android:progressDrawable="@android:color/transparent"
+                                    android:thumb="@drawable/thumb"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintHorizontal_bias="0.085"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent"
+                                    app:layout_constraintVertical_bias="0.0" />
 
-                                    <SeekBar
-                                        android:id="@+id/seek_bar_selected"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:clickable="false"
-                                        android:focusable="false"
-                                        android:progressDrawable="@android:color/transparent"
-                                        android:thumb="@drawable/thumb"
-                                        app:layout_constraintBottom_toBottomOf="parent"
-                                        app:layout_constraintEnd_toEndOf="parent"
-                                        app:layout_constraintHorizontal_bias="0.085"
-                                        app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toTopOf="parent"
-                                        app:layout_constraintVertical_bias="0.0" />
+                            </RelativeLayout>
 
-                                </RelativeLayout>
+                        </HorizontalScrollView>
 
-                            </HorizontalScrollView>
+                    </ScrollView>
 
-                        </ScrollView>
-
-
-                    </android.support.constraint.ConstraintLayout>
 
                 </android.support.constraint.ConstraintLayout>
+
 
             </LinearLayout>
 
