--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:orientation="vertical">
 
-    <VideoView
+    <ImageView
         android:id="@+id/img_item_video"
         android:layout_width="150dp"
         android:layout_height="100dp"
         android:layout_weight="1"
+        android:alpha="0.3"
         app:srcCompat="@android:color/darker_gray" />
 
     <LinearLayout
+        android:id="@+id/title_video_container"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/img_item_video">
 
         <ImageView
             android:id="@+id/img_upload_video"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/icons8_stockage_cloud_priv__96"/>
+            android:src="@drawable/icons8_stockage_cloud_priv__96" />
 
         <TextView
             android:id="@+id/title_video"
@@ -43,7 +46,19 @@
         android:layout_height="wrap_content"
         android:text="@string/date"
         android:textColor="@color/white"
-        app:fontFamily="@font/roboto" />
+        app:fontFamily="@font/roboto"
+        app:layout_constraintTop_toBottomOf="@id/title_video_container"/>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        app:layout_constraintBottom_toBottomOf="@+id/img_item_video"
+        app:layout_constraintEnd_toEndOf="@+id/img_item_video"
+        app:layout_constraintStart_toStartOf="@id/img_item_video"
+        app:layout_constraintTop_toTopOf="@+id/img_item_video"
+        app:srcCompat="@drawable/icons8_lecture_de_youtube_100" />
 
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
