--- a/app/src/main/res/layout-land/activity_selected_video.xml
+++ b/app/src/main/res/layout-land/activity_selected_video.xml
@@ -31,10 +31,27 @@
                 android:layout_weight="0.3"
                 android:orientation="vertical">
 
-                <VideoView
-                    android:id="@+id/vv_preview"
+                <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="217dp" />
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:id="@+id/vv_preview"
+                        android:layout_width="match_parent"
+                        android:layout_height="217dp"
+                        app:srcCompat="@android:color/darker_gray"
+                        android:alpha="0.3"/>
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toBottomOf="@+id/vv_preview"
+                        app:layout_constraintEnd_toEndOf="@+id/vv_preview"
+                        app:layout_constraintStart_toStartOf="@id/vv_preview"
+                        app:layout_constraintTop_toTopOf="@+id/vv_preview"
+                        app:srcCompat="@drawable/icons8_lecture_de_youtube_100"/>
+                </android.support.constraint.ConstraintLayout>
+
 
                 <TextView
                     android:id="@+id/tv_title"
