chargement donnee spinner affichage tag

--- a/app/src/main/res/layout-land/activity_start.xml
+++ b/app/src/main/res/layout-land/activity_start.xml
@@ -102,8 +102,8 @@
 
                         <Spinner
                             android:id="@+id/spinner_session_infos"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:layout_height="30dp"
                             android:layout_marginLeft="32dp"
                             android:layout_marginStart="32dp"
                             android:layout_marginTop="12dp"
