--- a/app/src/main/res/layout/item_spinner.xml
+++ b/app/src/main/res/layout/item_spinner.xml
@@ -4,4 +4,5 @@
     android:layout_height="wrap_content"
     android:background="@drawable/style_input"
     android:padding="10dp"
-    android:textColor="@color/colorWhiteTwo"/>
+    android:text="Importer"
+    android:textColor="@color/colorWhiteTwo" />
