--- a/app/src/main/res/layout-land/activity_connexion.xml
+++ b/app/src/main/res/layout-land/activity_connexion.xml
@@ -124,20 +124,22 @@
 
             </LinearLayout>
 
-            <Button
+            <TextView
                 android:id="@+id/btn_create_account"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:background="@null"
                 android:fontFamily="@font/roboto"
                 android:text="@string/create_account"
-                android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="12sp"
+                android:gravity="center_vertical"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linear_layout_add" />
 
         </android.support.constraint.ConstraintLayout>
