--- a/app/src/main/res/layout-land/activity_selected_video.xml
+++ b/app/src/main/res/layout-land/activity_selected_video.xml
@@ -70,7 +70,7 @@
                     android:layout_height="72dp"
                     android:layout_marginBottom="8dp"
                     android:layout_marginTop="8dp"
-                    android:text="@string/description"
+                    android:text="@string/no_description"
                     android:textColor="@color/white"
                     android:textSize="12sp"
                     app:fontFamily="@font/roboto" />
