onClick sur la timeline

--- a/app/src/main/res/layout-land/activity_play_video.xml
+++ b/app/src/main/res/layout-land/activity_play_video.xml
@@ -159,8 +159,10 @@
                             android:layout_alignParentTop="true"
                             android:clickable="false"
                             android:focusable="false"
+                            android:longClickable="false"
                             android:progressDrawable="@android:color/transparent"
                             android:thumb="@drawable/thumb"
+                            android:visibility="visible"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.085"
