COMM mise en ligne

--- a/app/src/main/res/layout-land/activity_selected_video.xml
+++ b/app/src/main/res/layout-land/activity_selected_video.xml
@@ -118,6 +118,7 @@
                         android:background="@drawable/style_button_white"
                         android:text="@string/upload"
                         android:textColor="@color/colorBlack"
+                        android:visibility="gone"
                         app:fontFamily="@font/roboto_bold" />
                 </LinearLayout>
             </LinearLayout>
